# cosine-is-almost

./: LICENSE  README.md  conda-env.yaml  requirements.txt
protopnext/: .gitignore  .pre-commit-config.yaml  README.md  conda-env.yaml  pyproject.toml
protopnext/inttest/: conftest.py  test_downloads.py  test_eval.py  test_train.py  test_visualization.py
protopnext/inttest/datasets/: cifar10_fa.py
protopnext/protopnet/: __init__.py  __main__.py  activations.py  backbones.py  cli.py  embedding.py  eval.py  losses.py  metrics.py  model_losses.py  pacmap.py  pixel_space.py  prediction_heads.py  preprocess.py  prototype_layers.py  prototypical_part_model.py  train_deformable.py  train_protopnet.py  train_prototree.py  train_support_trivial.py  train_tesnet.py  visualization.py  weights_and_biases.py
protopnext/protopnet/datasets/: __init__.py  cars.py  cars_cropped.py  cifar10.py  cli.py  cub200.py  cub200_corners.py  cub200_cropped.py  dataset_prep.py  dogs.py  mammo.py  torch_extensions.py  util.py
protopnext/protopnet/models/: deformable_protopnet.py  prototree.py  st_protopnet.py  vanilla_protopnet.py
protopnext/protopnet/pretrained/: convnext_features.py  densenet_features.py  google_drive.py  resnet_features.py  spikenet_features.py  vgg_features.py
protopnext/protopnet/train/: __init__.py  checkpointing.py  metrics.py  trainer.py  types.py
protopnext/protopnet/utilities/: general_utilities.py  mammo_utilities.py  naming.py  project_utilities.py  trainer_utilities.py  visualization_utilities.py
protopnext/test/: conftest.py  test_activations.py  test_backbones.py  test_embedding.py  test_eval.py  test_losses.py  test_metrics.py  test_model_losses.py  test_pixel_space.py  test_prediction_heads.py  test_prototype_layer.py  test_prototypical_part_model.py  test_utilities.py  test_visualization.py
protopnext/test/config/: e2e-test-settings.yaml  test-analysis.yaml
protopnext/test/datasets/: conftest.py  (+9 more)
swandb/: .flake8  .gitignore  README.md  conda-env.yaml  pyproject.toml
swandb/swandb/: __main__.py  cli.py  py_dispatch.py
swandb/test/: MANUAL.md  conftest.py  example_command_config.yaml  example_command_generator.py  mock_command_sweep.yaml  mock_method_sweep.yaml  mock_runner_config.yaml  mock_slurm.yaml  mock_time_limit_sweep.yaml  mock_train.py  runs.csv  test_cli.py  test_main.py
(+82 files in other folders)
